--- a/YangCunXueTang/package.json
+++ b/YangCunXueTang/package.json
@@ -7,10 +7,17 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "seed": "npx prisma db seed"
   },
   "dependencies": {
     "nuxt": "^3.12.4",
     "vue": "latest"
-  }
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.6"
+  },
+  "prisma": {
+  "seed": "ts-node server/database/seed.ts"
+}
 }
